--- a/github/package.json
+++ b/github/package.json
@@ -4,6 +4,9 @@
   "description": "A React Component for GitHub Login",
   "main": "index.js",
   "scripts": {
+    "build": "NODE_ENV=production webpack -p --config webpack.config.dist.js",
+    "start": "NODE_ENV=development webpack-dev-server --config webpack.config.js",
+    "lint": "eslint src",
     "test": "jest"
   },
   "repository": {
@@ -18,7 +21,21 @@
   "homepage": "https://github.com/sseworld/sse-auth#readme",
   "dependencies": {
     "@types/node": "^20.14.2",
-    "webpack": "^5.92.0",
-    "webpack-dev-server": "^5.0.4"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.19",
+    "babel": "^6.23.0",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^9.1.3",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-react": "^7.34.2",
+    "fbjs": "^3.0.5",
+    "prop-types": "^15.8.1",
+    "webpack": "3.3.x",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "2.5.x"
   }
 }
