--- a/github/package.json
+++ b/github/package.json
@@ -27,15 +27,15 @@
   "devDependencies": {
     "autoprefixer": "^10.4.19",
     "babel": "^6.23.0",
-    "babel-core": "^6.26.3",
+    "babel-core": "^5.8.38",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^9.1.3",
+    "babel-loader": "^7.1.1",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-react": "^7.34.2",
     "fbjs": "^3.0.5",
     "prop-types": "^15.8.1",
-    "webpack": "3.3.x",
+    "webpack": "^3.12.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "2.5.x"
+    "webpack-dev-server": "^5.0.4"
   }
 }
