--- a/github/package.json
+++ b/github/package.json
@@ -19,23 +19,40 @@
     "url": "https://github.com/sseworld/sse-auth/issues"
   },
   "homepage": "https://github.com/sseworld/sse-auth#readme",
-  "dependencies": {
-    "@types/node": "^20.14.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
-  },
   "devDependencies": {
-    "autoprefixer": "^10.4.19",
-    "babel": "^6.23.0",
-    "babel-core": "^5.8.38",
-    "babel-eslint": "^10.1.0",
+    "autoprefixer": "^7.1.2",
+    "babel": "^6.5.2",
+    "babel-core": "^6.6.5",
+    "babel-eslint": "^7.2.3",
+    "babel-jest": "^20.0.3",
     "babel-loader": "^7.1.1",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-plugin-react": "^7.34.2",
-    "fbjs": "^3.0.5",
-    "prop-types": "^15.8.1",
-    "webpack": "^3.12.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4"
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "enzyme": "^2.6.0",
+    "eslint": "^4.2.0",
+    "eslint-config-airbnb": "^15.0.2",
+    "eslint-plugin-react": "^7.1.0",
+    "fbjs": "^0.8.6",
+    "jest": "^20.0.4",
+    "object-assign": "^4.1.0",
+    "react": "^15.1.0",
+    "react-addons-test-utils": "^15.1.0",
+    "react-css-modules": "^4.5.2",
+    "react-dom": "^15.1.0",
+    "react-test-renderer": "^15.4.1",
+    "webpack": "3.3.x",
+    "webpack-dev-server": "2.5.x"
+  },
+  "peerDependencies": {
+    "prop-types": "^15.5.10",
+    "react": "^15.6.1"
+  },
+  "babel": {
+    "presets": [
+      "es2015",
+      "react",
+      "stage-0"
+    ]
   }
 }
