--- a/facebook/package.json
+++ b/facebook/package.json
@@ -1,9 +1,12 @@
 {
   "name": "@sse-auth/facebook",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "A Component React for Facebook Login",
+  "main": "dist/facebook-login.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "NODE_ENV=development webpack-dev-server --config webpack.config.js --host $IP --port $PORT",
+    "bundle": "NODE_ENV=production webpack -p --config webpack.config.dist.js",
+    "test": "node_modules/.bin/eslint src/**/*.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +18,43 @@
     "url": "https://github.com/sseworld/sse-auth/issues"
   },
   "homepage": "https://github.com/sseworld/sse-auth#readme",
-  "description": ""
+  "keywords": [
+    "react",
+    "reactjs",
+    "react-component",
+    "facebook-login",
+    "react-facebook-login"
+  ],
+  "devDependencies": {
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
+    "autoprefixer": "^6.0.3",
+    "babel": "^6.5.2",
+    "babel-core": "^6.6.5",
+    "babel-eslint": "^4.1.6",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.1.18",
+    "babel-preset-stage-0": "^6.5.0",
+    "css-loader": "^0.19.0",
+    "eslint": "^1.10.3",
+    "eslint-config-airbnb": "^2.0.0",
+    "eslint-plugin-react": "^3.11.3",
+    "postcss-loader": "^0.6.0",
+    "react-addons-test-utils": "^15.1.0",
+    "react-css-modules": "^3.5.0",
+    "style-loader": "0.12.x",
+    "webpack": "1.12.x",
+    "webpack-dev-server": "1.12.x"
+  },
+  "peerDependencies": {
+    "react": "^15.1.0"
+  },
+  "babel": {
+    "presets": [
+      "es2015",
+      "react",
+      "stage-0"
+    ]
+  }
 }
