--- a/facebook/package.json
+++ b/facebook/package.json
@@ -26,31 +26,31 @@
     "react-facebook-login"
   ],
   "devDependencies": {
-    "autoprefixer": "^6.0.3",
+    "autoprefixer": "^10.4.19",
     "babel": "^6.5.2",
-    "babel-core": "^6.6.5",
-    "babel-eslint": "^4.1.6",
-    "babel-loader": "^6.2.4",
+    "babel-core": "^4.7.16",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^9.1.3",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
     "babel-preset-stage-0": "^6.5.0",
-    "css-loader": "^0.19.0",
-    "eslint": "^1.10.3",
+    "css-loader": "^7.1.2",
+    "eslint": "^9.4.0",
     "eslint-config-airbnb": "^2.0.0",
     "eslint-plugin-react": "^3.11.3",
-    "node-sass": "^3.13.1",
-    "postcss-loader": "^0.6.0",
-    "react": "^15.1.0",
+    "node-sass": "^9.0.0",
+    "postcss-loader": "^8.1.1",
+    "react": "^18.3.1",
     "react-addons-test-utils": "^15.1.0",
     "react-css-modules": "^3.5.0",
     "react-dom": "^15.1.0",
-    "sass-loader": "^3.0.0",
-    "style-loader": "0.12.x",
+    "sass-loader": "^14.2.1",
+    "style-loader": "^4.0.0",
     "webpack": "1.12.x",
-    "webpack-dev-server": "1.12.x"
+    "webpack-dev-server": "^5.0.4"
   },
   "peerDependencies": {
-    "react": "^15.1.0"
+    "react": "^18.3.1"
   },
   "babel": {
     "presets": [
