--- a/instagram/package.json
+++ b/instagram/package.json
@@ -54,7 +54,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-fontawesome": "^1.7.1",
-    "rollup": "^4.18.0"
+    "rollup": "^4.18.0",
+    "rollup-plugin-analyzer": "^4.0.0"
   },
   "babel": {
     "presets": [
