--- a/twitter/package.json
+++ b/twitter/package.json
@@ -24,17 +24,9 @@
     "@types/crypto-js": "^4.2.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "css-loader": "^7.1.2",
-    "file-loader": "^6.2.0",
     "prettier": "^3.3.2",
     "react": "^18.3.1",
-    "sass": "^1.77.5",
-    "sass-loader": "^14.2.1",
-    "semantic-ui-css": "^2.5.0",
-    "semantic-ui-react": "^2.1.5",
-    "style-loader": "^4.0.0",
-    "typescript": "^5.4.5",
-    "url-loader": "^4.1.1"
+    "typescript": "^5.4.5"
   },
   "keywords": [
     "react",
