--- a/linkedin/package.json
+++ b/linkedin/package.json
@@ -19,7 +19,8 @@
   ],
   "scripts": {
     "clean": "rimraf build",
-    "build": "rollup -c",
+    "rbuild": "rollup -c",
+    "tbuild": "tsc",
     "prepublishOnly": "npm run build",
     "prettier": "prettier src --write"
   },
@@ -36,11 +37,13 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^26.0.1",
     "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-sucrase": "^5.0.2",
     "@rollup/plugin-typescript": "^11.1.6",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.13.0",
     "@typescript-eslint/parser": "^7.13.0",
+    "acorn-jsx": "^5.3.2",
     "prettier": "^3.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
