--- a/github/package.json
+++ b/github/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.1",
   "description": "A React Component for GitHub Login",
   "main": "dist/GitHubLogin.js",
+  "type": "module",
   "keywords": [
     "react",
     "reactjs",
@@ -11,10 +12,7 @@
     "react-github-login"
   ],
   "scripts": {
-    "build": "NODE_ENV=production webpack -p --config webpack.config.dist.js",
-    "start": "NODE_ENV=development webpack-dev-server --config webpack.config.js",
-    "lint": "eslint src",
-    "test": "jest"
+    "build": "rollup -c"
   },
   "repository": {
     "type": "git",
@@ -27,39 +25,12 @@
   },
   "homepage": "https://github.com/sseworld/sse-auth#readme",
   "devDependencies": {
-    "autoprefixer": "^7.1.2",
-    "babel": "^6.5.2",
-    "babel-core": "^6.6.5",
-    "babel-eslint": "^7.2.3",
-    "babel-jest": "^20.0.3",
-    "babel-loader": "^7.1.1",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "enzyme": "^2.6.0",
-    "eslint": "^4.2.0",
-    "eslint-config-airbnb": "^15.0.2",
-    "eslint-plugin-react": "^7.1.0",
-    "fbjs": "^0.8.6",
-    "jest": "^20.0.4",
-    "object-assign": "^4.1.0",
-    "react": "^15.1.0",
-    "react-addons-test-utils": "^15.1.0",
-    "react-css-modules": "^4.5.2",
-    "react-dom": "^15.1.0",
-    "react-test-renderer": "^15.4.1",
-    "webpack": "3.3.x",
-    "webpack-dev-server": "2.5.x"
-  },
-  "peerDependencies": {
-    "prop-types": "^15.5.10",
-    "react": "^15.6.1"
-  },
-  "babel": {
-    "presets": [
-      "es2015",
-      "react",
-      "stage-0"
-    ]
+    "@babel/preset-react": "^7.24.7",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-commonjs": "^26.0.1",
+    "@rollup/plugin-terser": "^0.4.4",
+    "prop-types": "^15.8.1",
+    "react": "^15.7.0",
+    "rollup": "^4.18.0"
   }
 }
