--- a/linkedin/package.json
+++ b/linkedin/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@sse-auth/linketin",
+  "name": "@sse-auth/linkedin",
   "version": "1.0.0",
   "description": "React component for Linked In Log In feature using OAuth 2.0",
   "main": "build/index.js",
