--- a/dropbox/package.json
+++ b/dropbox/package.json
@@ -33,23 +33,23 @@
   },
   "homepage": "https://github.com/sseworld/sse-auth#readme",
   "dependencies": {
-    "compress-json": "2.1.2",
-    "request": "2.88.2"
+    "compress-json": "^2.1.2",
+    "request": "^2.88.2"
   },
   "devDependencies": {
-    "@hapi/hapi": "19.1.1",
-    "async": "1.5.0",
-    "cheerio": "0.22.0",
-    "ejs": "2.5.6",
-    "expect.js": "0.3.1",
-    "js-beautify": "1.14.0",
-    "md5": "2.3.0",
-    "mocha": "^7.1.2",
-    "nconf": "0.11.3",
-    "opn": "3.0.3",
-    "should": "8.0.2",
-    "stream-spec": "0.3.6",
-    "stream-tester": "0.0.5",
-    "underscore": "^1.13.1"
+    "@hapi/hapi": "^19.1.1",
+    "async": "^1.5.0",
+    "cheerio": "^0.22.0",
+    "ejs": "^2.5.6",
+    "expect.js": "^0.3.1",
+    "js-beautify": "^1.14.0",
+    "md5": "^2.3.0",
+    "mocha": "^7.2.0",
+    "nconf": "^0.11.3",
+    "opn": "^3.0.3",
+    "should": "^8.0.2",
+    "stream-spec": "^0.3.6",
+    "stream-tester": "^0.0.5",
+    "underscore": "^1.13.6"
   }
 }
