--- a/github/package.json
+++ b/github/package.json
@@ -25,12 +25,12 @@
   },
   "homepage": "https://github.com/sseworld/sse-auth#readme",
   "devDependencies": {
-    "@babel/preset-react": "^7.24.7",
-    "@rollup/plugin-babel": "^6.0.4",
-    "@rollup/plugin-commonjs": "^26.0.1",
-    "@rollup/plugin-terser": "^0.4.4",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "prop-types": "^15.8.1",
-    "react": "^15.7.0",
-    "rollup": "^4.18.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tslib": "^2.6.3",
+    "typescript": "^5.4.5"
   }
 }
