--- a/github/package.json
+++ b/github/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.1",
   "description": "A React Component for GitHub Login",
   "main": "dist/GitHubLogin.js",
+  "types": "dist/GitHubLogin.d.ts",
+  "type": "module",
   "keywords": [
     "react",
     "reactjs",
@@ -11,10 +13,7 @@
     "react-github-login"
   ],
   "scripts": {
-    "build": "NODE_ENV=production webpack -p --config webpack.config.dist.js",
-    "start": "NODE_ENV=development webpack-dev-server --config webpack.config.js",
-    "lint": "eslint src",
-    "test": "jest"
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -27,33 +26,12 @@
   },
   "homepage": "https://github.com/sseworld/sse-auth#readme",
   "devDependencies": {
-    "autoprefixer": "^7.1.2",
-    "babel": "^6.5.2",
-    "babel-core": "^6.6.5",
-    "babel-eslint": "^7.2.3",
-    "babel-jest": "^20.0.3",
-    "babel-loader": "^7.1.1",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "enzyme": "^2.6.0",
-    "eslint": "^4.2.0",
-    "eslint-config-airbnb": "^15.0.2",
-    "eslint-plugin-react": "^7.1.0",
-    "fbjs": "^0.8.6",
-    "jest": "^20.0.4",
-    "object-assign": "^4.1.0",
-    "react": "^15.1.0",
-    "react-addons-test-utils": "^15.1.0",
-    "react-css-modules": "^4.5.2",
-    "react-dom": "^15.1.0",
-    "react-test-renderer": "^15.4.1",
-    "webpack": "3.3.x",
-    "webpack-dev-server": "2.5.x"
-  },
-  "peerDependencies": {
-    "prop-types": "^15.5.10",
-    "react": "^15.6.1"
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tslib": "^2.6.3",
+    "typescript": "^5.4.5"
   },
   "babel": {
     "presets": [
