--- a/examples/github/package.json
+++ b/examples/github/package.json
@@ -1,23 +1,27 @@
 {
-  "name": "@sse-auth/examples-github",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "github",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/sseworld/sse-auth.git"
-  },
-  "author": "SSE World",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/sseworld/sse-auth/issues"
-  },
-  "homepage": "https://github.com/sseworld/sse-auth#readme",
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "@sse-auth/github": "^2.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
+    "@vitejs/plugin-react": "^4.2.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.6",
+    "vite": "^5.2.0"
   }
 }
